Added support for transactional polling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-logging.level.com.opencredo.examples.hzchat=DEBUG
+logging.level.com.opencredo.examples.hzchat=trace
+#logging.level.org.mpilone.hazelcastmq=trace
+#logging.level.org.springframework.transaction=debug
+#logging.level.com.hazelcast.transaction=debug
