Updates unit test for using TestHazelcastInstanceFactory

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 			<version>2.5.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+			<classifier>tests</classifier>
+            <version>${hazelcast.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	
