--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
 			<classifier>tests</classifier>
+            <version>${hazelcast.version}</version>
 			<scope>test</scope>
 		</dependency>
 
